--- a/action.yml
+++ b/action.yml
@@ -2,8 +2,12 @@ name: 'Base Check'
 description: 'Check for base repository updates'
 
 inputs:
-  github_token:
-    description: 'GitHub API Token'
+  ssh_private_key:
+    description: 'SSH private key for GitHub access'
+    required: true
+
+  github_pa_token:
+    description: 'Personal access token (repo scope) for GH CLI access'
     required: true
 
   base_repo_config_file:
@@ -42,7 +46,8 @@ runs:
   using: 'docker'
   image: 'Dockerfile'
   env:
-    GITHUB_TOKEN: ${{ inputs.github_token }}
+    SSH_PRIVATE_KEY: ${{ inputs.ssh_private_key }}
+    GITHUB_PA_TOKEN: ${{ inputs.github_pa_token }}
     BASE_REPO_CONFIG_FILE: ${{ inputs.base_repo_config_file }}
     PR_LABELS: ${{ inputs.pr_labels }}
     PR_REVIEWER: ${{ inputs.pr_reviewer }}
