--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -67,7 +67,7 @@ jobs:
       ## plain build for pull-requests
       - name: Docker Buildx (build)
         uses: docker/build-push-action@v2.10.0
-        if: success() && !contains(github.ref, 'master')
+        if: success() && !contains(github.ref, 'master') && github.event_name != 'release'
         with:
           push: false
           context: ./${{ matrix.docker-file.path }}
@@ -77,16 +77,16 @@ jobs:
 
       ## login for publishing when executing on master
       - name: Docker Login
-        if: success() && contains(github.ref, 'master')
+        if: success() && (contains(github.ref, 'master') || github.event_name == 'release')
         uses: docker/login-action@v1.14.1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      ## build and publish when executing on master
+      ## build and publish when executing on master or on publishing a release
       - name: Docker Buildx (push)
         uses: docker/build-push-action@v2.10.0
-        if: success() && contains(github.ref, 'master')
+        if: success() && (contains(github.ref, 'master') || github.event_name == 'release')
         with:
           push: true
           context: ./${{ matrix.docker-file.path }}
@@ -96,7 +96,7 @@ jobs:
 
       ## run inspect when executing on master
       - name: Inspect Image
-        if: always() && github.event_name != 'pull_request' && contains(github.ref, 'master')
+        if: always() && github.event_name != 'pull_request'
         run: |
           docker buildx imagetools inspect ${{ steps.prepare.outputs.docker_image }}:${{ steps.prepare.outputs.version }}
 
