--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -80,8 +80,8 @@ jobs:
         if: success() && contains(github.ref, 'master')
         uses: docker/login-action@v1.14.1
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       ## build and publish when executing on master
       - name: Docker Buildx (push)
