--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -53,11 +53,11 @@ jobs:
 
       ## set up QEMU for other architectures
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1.2.0
+        uses: docker/setup-qemu-action@v1
 
       - name: Set up Docker Buildx
         id: buildx
-        uses: docker/setup-buildx-action@v1.7.0
+        uses: docker/setup-buildx-action@v1
         with:
           install: true
 
@@ -66,7 +66,7 @@ jobs:
 
       ## plain build for pull-requests
       - name: Docker Buildx (build)
-        uses: docker/build-push-action@v2.10.0
+        uses: docker/build-push-action@v2
         if: success() && !contains(github.ref, 'master')
         with:
           push: false
@@ -75,17 +75,16 @@ jobs:
           platforms: ${{ matrix.docker-file.platforms }}
           tags: ${{ steps.prepare.outputs.tags }}
 
-      ## login for publishing when executing on master
-      - name: Docker Login
-        if: success() && contains(github.ref, 'master')
-        uses: docker/login-action@v1.14.1
+      ## login to DockerHub for publishing (https://github.com/docker/login-action)
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       ## build and publish when executing on master
       - name: Docker Buildx (push)
-        uses: docker/build-push-action@v2.10.0
+        uses: docker/build-push-action@v2
         if: success() && contains(github.ref, 'master')
         with:
           push: true
