--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,19 +3,16 @@
 
 FROM node:gallium-alpine3.14
 
-## install git & openssh
 RUN apk update && apk upgrade && \
   echo @edge http://nl.alpinelinux.org/alpine/edge/community >> /etc/apk/repositories && \
   echo @edge http://nl.alpinelinux.org/alpine/edge/main >> /etc/apk/repositories && \
-  && apk add --no-cache \
-  git \
-  openssh \
+  ## install git & openssh
   ## install Chrome for headless browser for testing client apps
-  chromium@edge nss@edge \
+  apk add --no-cache git openssh chromium@edge nss@edge && \
   ## install GitHub CLI
-  && mkdir /ghcli \
-  && wget -c https://github.com/cli/cli/releases/download/v1.11.0/gh_1.11.0_linux_386.tar.gz -O -| tar --strip-components=1 -C /ghcli -xz \
-  && ln -s /ghcli/bin/gh /usr/local/bin/
+  mkdir /ghcli && \
+  wget -c https://github.com/cli/cli/releases/download/v1.11.0/gh_1.11.0_linux_386.tar.gz -O -| tar --strip-components=1 -C /ghcli -xz && \
+  ln -s /ghcli/bin/gh /usr/local/bin/
 
 ENV CHROME_BIN /usr/bin/chromium-browser
 ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD true
