Upgrade node to v20

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,7 @@
-## Based on timbru31/node-alpine-git:16
-## https://github.com/timbru31/docker-node-alpine-git/blob/master/16/Dockerfile
+## Based on timbru31/node-alpine-git:20
+## https://github.com/timbru31/docker-node-alpine-git/blob/master/20/Dockerfile
 
-FROM node:gallium-alpine3.14
+FROM node:iron-alpine3.19
 
 RUN apk update && apk upgrade && \
   apk add --no-cache \
